<resources>
    <string name="app_name">Hacked?</string>
    <string name="action_settings">Settings</string>
    <string name="action_check">Check</string>
    <string name="hint_name">Account name or email address</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_account_delete_msg">Do you want to delete account \'%1$s\'?</string>
    <string name="ok">OK</string>
    <string name="action_add_account">Add account</string>
    <string name="action_rateus">Rate us</string>
    <string name="snackbar_checking_account">Checking for breaches - the list will be updated with results soon</string>
    <string name="last_checked">Last checked:</string>
    <string name="placeholder_date">yyyy/mm/dd hh:mm</string>
    <string name="status">Breach status:</string>
    <string name="status_placeholder">No breach found</string>
    <string name="status_no_breach_found">No breach found</string>
    <string name="status_breaches_found">%1$d breaches</string>
    <string name="status_breaches_found_acknowledged">%1$d breaches (%2$d acknowledged)</string>
    <string name="notification_title_new_breaches_found">Found new breached accounts</string>
    <string name="notification_text_click_to_open">Tap here to see details</string>
    <string name="title_breach_details">Breach details</string>
    <string name="label_domain">Domain:</string>
    <string name="placeholder_domain">http://www.something.com</string>
    <string name="label_breach_date">Breach date:</string>
    <string name="label_compromised_data">Compromised data:</string>
    <string name="placeholder_description">text describing breach</string>
    <string name="placeholder_compromised_data">comp, data, columns</string>
    <string name="initial_account_welcome_title">Welcome to Hacked?!</string>
    <string name="initial_account_text">Let\'s get you set up and ready to use <i>Hacked?</i>. Please enter a first account name or email address below and press add.</string>
    <string name="initial_help_title">What else is in there?</string>
    <string name="initial_help_text_2">Click the plus icon to add another username or email address.\nClick the orange sync button to let <i>Hacked?</i> find breaches for accounts.\nSelect an account to see more details on the breaches.\nRemove an account by long-clicking on it.</string>
    <string name="initial_help_text_3">Check if your password was previously exposed in a breach by choosing the <i>Pwned Passwords</i> item from the drawer menu.</string>
    <string name="dismiss">Dismiss</string>
    <string name="toast_dont_show_initial_help_again">You have dismissed the introduction. It will not be shown again.</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="breach_acknowledged">Breach acknowledged</string>
    <string name="pref_initial_help_dismissed">PREF_INITIAL_HELP_DISMISSED</string>
    <string name="pref_title_synchronization">Synchronization</string>
    <string name="pref_key_sync_enable">ENABLE_BACKGROUND_SYNC</string>
    <string name="pref_title_sync_enable">Enable</string>
    <string name="pref_summary_sync_enable">Enables automatic checking for breaches in regular intervals</string>
    <string name="pref_key_sync_interval">BG_SYNC_INTERVAL</string>
    <string name="pref_title_sync_interval">Sync interval</string>
    <string name="pref_summary_sync_interval">Defines how often the background check happens</string>
    <string name="pref_title_dialog_interval">Synchronization interval</string>
    <string name="pref_sync_interval_default">everyday</string>
    <string name="pref_key_sync_via_cellular">SYNC_VIA_CELLULAR</string>
    <string name="pref_title_sync_via_cellular">Check when not connected to Wifi</string>
    <string name="pref_summary_sync_via_cellular">App will use mobile data connection when no Wifi is available (this might incur additional costs on your phone bill)</string>
    <string name="title_settings">Settings</string>
    <string name="PREF_KEY_LAST_SYNC_TIMESTAMP">LAST_SYNC_TIMESTAMP</string>
    <string name="toast_error_no_network">No network available. Please try again later.</string>
    <string name="toast_error_error_during_check">The server could not be contacted - Please try again later</string>
    <string name="pref_initial_setup_account_done">PREF_INITIAL_SETUP_ACCOUNT_DONE</string>
    <string name="toast_please_enter_account">Please enter an account name and try again.</string>
    <string name="toast_account_added">Congratulations, you have added your first account!</string>
    <string name="initial_setup_check_title">Background checks</string>
    <string name="initial_setup_check_text">Would you like <i>Hacked?</i> to check for breaches daily?\nIf you choose no, you can enable this feature any time by opening the settings.\nThe app will only check if connected to a Wifi network (you can change this in the settings too).</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="pref_initial_setup_check_done">PREF_INITIAL_SETUP_CHECK_DONE</string>
    <string name="toast_check_not_enabled">Automatic check not enabled. You can change this any time by opening the settings.</string>
    <string name="toast_check_enabled">Enabled daily check for breaches.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="no_breaches_found">No breaches were found for this account.</string>
    <string name="toast_account_exists">This account already exists. Please enter a different name.</string>
    <string name="notification_new_breach_found">Breached: %1$s</string>
    <string name="toast_check_in_progress">A check is already in progress. Please try again later.</string>
    <string name="notification_summary_found_breaches">Found %1$d account breaches</string>
    <string name="toast_enter_valid_name">Please enter a valid account name.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="site_name">Site name</string>
    <string name="nd_top_20_breached_websites">Top 20 breached websites</string>
    <string name="nd_accounts">Accounts</string>
    <string name="nd_all_breaches">All breaches</string>
    <string name="nd_most_recent_breaches">Most recent breaches</string>
    <string name="accounts">breached accounts</string>
    <string name="sample_pwn_count">1000 accounts</string>
    <string name="PREF_KEY_LAST_SYNC_HIBP_TOP20">LAST_SYNC_HIBP_TOP20</string>
    <string name="error_download_data">Error while downloading data - please try again later</string>
    <string name="affected_sites">Sites: %1$s</string>
    <string name="unconfirmed">(unconfirmed)</string>
    <string name="data_provided_by">Data provided by</string>
    <string name="pwned">Pwned?</string>
    <string name="password">Password</string>
    <string name="nd_pwned_passwords">Pwned Passwords</string>
    <string name="password_ok">This password looks ok.</string>
    <string name="password_pwned">This password was found %1$s times in known data breaches and should never be used. If you have used it anywhere, change it immediately!</string>
    <string name="password_info">Enter password below to check if it was exposed in data breaches</string>
    <string name="channel_name">Hacked?</string>
    <string name="channel_name_general">Hacked? - General info</string>
    <string name="unverified">(unverified)</string>
    <string name="account_deleted">Account deleted</string>
    <string name="rating_dialog_title">Do you like the \'Hacked?\' app?</string>
    <string name="rating_dialog_message">Please leave your feedback in the Google Play Store</string>
    <string name="rating_dialog_positive">Rate us now</string>
    <string name="rating_dialog_neutral">Maybe later</string>
    <string name="rating_dialog_negative">Never</string>
    <string name="toast_error_google_play_missing">Google Play services are required. Please install and try again.</string>
    <string name="breach_details_compromised_account_found">A compromised account was found</string>
    <string name="breach_details_dash">-</string>
    <string name="breach_details_what_now">what now?</string>
    <string name="breach_details_first">1.</string>
    <string name="breach_details_second">2.</string>
    <string name="breach_details_third">3.</string>
    <string name="breach_details_first_text">Use a password manager (%1$s, %2$s, %3$s, …) to generate a unique random password for every account</string>
    <string name="breach_details_second_text">Enable 2-factor authentication when possible</string>
    <string name="breach_details_third_text">When an account is breached, just change that password</string>
    <string name="action_privacypolicy">Privacy policy</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_accounts">My Accounts</string>
    <string name="title_recent_breaches">Recent Breaches On HIBP</string>
    <string name="title_pwned_passwords">Pwned Password</string>
    <string name="account_ok">Account ok</string>
    <string name="show_details">Show details</string>
    <string name="placeholder_count">0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_delete_account">Delete account</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_visit_hibp">Visit haveibeenpwned.com</string>
    <string name="firstuse_title">Hello and welcome to Hacked?</string>
    <string name="skip">Not now</string>
    <string name="add_and_dismiss_help">Add account</string>
    <string name="firstuse_p1">The Hacked? app allows you to check if an account has been compromised and it\'s account details (email address, password, ...) have been (publicly) leaked onto the internet.</string>
    <string name="firstuse_p2">Since this is the first time you use the app, lets add your first account together</string>
    <string name="firstuse_p3">All accounts stored in the app will be checked once a day (this can be changed in the settings).</string>
    <string name="firstuse_p4">The data source for the breaches is the well known website <a href="https://haveibeenpwned.com">haveibeenpwned.com</a>. If you want to learn more about where the data comes from, have a look at their <a href="https://haveibeenpwned.com/FAQs">FAQs</a>.</string>
</resources>