<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_privacypolicy"
        android:orderInCategory="210"
        android:title="@string/action_privacypolicy"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_visit_hibp"
        android:orderInCategory="210"
        android:title="@string/action_visit_hibp"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never" />

</menu>
