<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="li.doerf.hacked.AccountListActivity">
    <item
        android:id="@+id/action_add_account"
        android:orderInCategory="100"
        android:title="@string/action_add_account"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_check"
        android:orderInCategory="100"
        android:title="@string/action_check"
        android:icon="@android:drawable/stat_notify_sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="never" />
</menu>
