<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/initial_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:padding="@dimen/card_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:text="@string/initial_account_welcome_title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/initial_account_text"/>

            <EditText
                android:id="@+id/account"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_padding"
                android:layout_marginLeft="@dimen/card_padding"
                android:layout_marginRight="@dimen/card_padding"
                android:layout_marginBottom="@dimen/card_padding"
                android:imeOptions="actionDone"
                android:hint="@string/hint_name"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_add_initial_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_gravity="right"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/initial_setup_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:visibility="gone"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:padding="@dimen/card_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/initial_setup_check_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:text="@string/initial_setup_check_title"/>

            <TextView
                android:id="@+id/initial_setup_check_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/initial_setup_check_title"
                android:textColor="@android:color/black"
                android:text="@string/initial_setup_check_text"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/initial_setup_check_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/initial_setup_check_text"
                android:layout_toLeftOf="@+id/initial_setup_check_yes"
                android:text="@string/no"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/initial_setup_check_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/initial_setup_check_text"
                android:layout_alignParentRight="true"
                android:text="@string/yes"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/initial_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:padding="@dimen/card_padding"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:text="@string/initial_help_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/initial_help_text_2"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_dismiss_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dismiss"
                android:layout_gravity="right"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/accounts_list"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>