<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="li.doerf.hacked.ui.fragments.PasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/card_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body1"
            android:paddingTop="@dimen/card_padding"
            android:paddingBottom="@dimen/card_padding"
            android:text="@string/password_info"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/check_pwned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/pwned" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:paddingTop="@dimen/card_padding"
            android:indeterminate="true"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/result_pwned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/card_padding"
            android:paddingBottom="@dimen/card_padding"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Body1"
            android:background="@color/account_status_breached"
            android:visibility="gone"
            android:text="@string/password_pwned"/>

        <TextView
            android:id="@+id/result_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/card_padding"
            android:paddingBottom="@dimen/card_padding"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Body1"
            android:background="@color/account_status_ok"
            android:visibility="gone"
            android:text="@string/password_ok"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <include layout="@layout/hibp_info"
            />
    </LinearLayout>

</RelativeLayout>
