<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/site_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/pwn_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_pwn_count"
        style="@style/TextNotice"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/site_name"
        app:layout_constraintStart_toEndOf="@id/site_name"
        />

    <ImageView
        android:id="@+id/show_details"
        android:src="@drawable/chevron_right_black"
        android:layout_width="18sp"
        android:layout_height="18sp"
        android:contentDescription="@string/show_details"
        app:layout_constraintBottom_toBottomOf="@id/site_name"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>