<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".ui.fragments.AccountsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        style="@style/OverviewCard"
        >

        <TextView
            android:id="@+id/title_accounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_accounts"
            style="@style/TextTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/last_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_date"
            style="@style/TextNotice"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_accounts"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/accounts_list"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/title_accounts"
            app:layout_constraintBottom_toTopOf="@+id/account"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/account"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_name"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/add"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_add_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="add,cancel,account"
            />

        <TextView
            android:id="@+id/hibp_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textMediumEmphasis"
            android:background="@color/hibp_info_bg_light"
            android:textSize="12sp"
            android:paddingTop="2dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>